# atika-bangla-htr-robustness

./: .gitignore  Bangla_HTR_Robustness_Manuscript.docx  Proposed Idea.docx.md  README.md  pyproject.toml
results/: archive_inventory.csv  archive_verification.csv  hf_access_status.json  line_dataset_describe.csv  line_dataset_summary.json  preprocessing_comparison.csv  sample_image_quality_metrics.csv  sample_manifest.csv  sample_text_stats.csv  sample_writer_safe_split_plan.csv  summary.json  thesis_results_report.md
results/crnn_ctc_full_baseline/: history.csv  prediction_examples.csv  summary.json
results/crnn_ctc_tiny/: history.csv  prediction_examples.csv  summary.json
scripts/: build_line_dataset.py  build_manuscript_docx.py  download_hf_split.py  train_crnn_ctc.py  write_public_readme.py
src/atika_htr/: __init__.py  cli.py
