[project]
name = "atika-bangla-htr"
version = "0.1.0"
description = "Bangla handwritten text recognition robustness experiments for Atika thesis work."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.14.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "pyarrow>=24.0.0",
    "rich>=13.7.0",
    "tabulate>=0.10.0",
    "tqdm>=4.66.0",
]

[project.scripts]
atika-htr = "atika_htr.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

